crates/compiler/src/tests/e2e/good/0387_generic_type_usage/main.gom
fn identity[T](x: T) -> T { x }

fn main() {
    let f: (int32) -> int32 = identity;
    println(f(42).to_string());
}
