crates/compiler/src/tests/e2e/bad/0573_recursive_generic_enum_specialization/main.gom
enum Weird[T] {
    W(Weird[(T, T)]),
}

fn f(x: Weird[int32]) -> unit {
    ()
}

fn main() -> unit {
    println("ok")
}
